Fixed `height` property to correctly display on Safari mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,8 @@ header a.active {
 #testimonials {
     background-color: var(--color-background-secondary);
     height: 100vh;
+    /*noinspection CssInvalidPropertyValue*/
+    height: -webkit-fill-available; /* Safari 10.1+ height property fix */
 }
 
 #testimonials h1 {
